--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,18 +23,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  email_validator: '^1.0.0'
   dio: ^3.0.10
-  page_transition: ^1.1.6
+  page_transition: ^1.1.7+5
   percent_indicator: "^2.1.7+2"
   grouped_checkbox: 1.0.0
   flutter_staggered_grid_view:
   flutter_circular_chart: ^0.1.0
-  font_awesome_flutter: ^8.2.0
+  font_awesome_flutter: ^8.11.0
   bubble_bottom_bar:
   adobe_xd: ^1.0.0+1
-  image_picker: ^0.5.3+1
+  image_picker: ^0.6.7+17
 
-  fl_chart: ^0.11.1
+  fl_chart: ^0.12.2
 
 dev_dependencies:
   flutter_test:
