--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,12 @@ dependencies:
   bubble_bottom_bar:
   adobe_xd: ^1.0.0+1
   image_picker: ^0.6.7+17
-
+  html_unescape: 1.0.2
   fl_chart: ^0.12.2
+  json_annotation: 3.1.1
+  universal_platform: ^0.1.3
+  event_bus: 1.1.1
+  configurable_expansion_tile: 1.0.0
 
 dev_dependencies:
   flutter_test:
