--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   universal_platform: ^0.1.3
   event_bus: 1.1.1
   configurable_expansion_tile: 1.0.0
+  flutter_rating_bar: ^3.0.1+1
 
 dev_dependencies:
   flutter_test:
