--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  in_app_update: ^1.1.15
   email_validator: '^1.0.0'
   dio: ^3.0.10
   page_transition: ^1.1.7+5
