--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,12 @@ dependencies:
   configurable_expansion_tile: 1.0.0
   flutter_rating_bar: ^3.0.1+1
   provider: 4.3.2+3
+  multi_image_picker: 
+  carousel_slider: ^1.3.0
+  carousel_pro: ^1.0.0
+  flutter_uploader: ^1.2.1 
+  # flutter_absolute_path:
+  file_picker: 
 
 
 dev_dependencies:
